--- a/App2025/src/main/resources/templates/club-create.html
+++ b/App2025/src/main/resources/templates/club-create.html
@@ -19,6 +19,8 @@
                     name="title"
                     th:field="*{title}"
                     placeholder="Title">
+            <p th:if="${#fields.hasErrors('title')}" class="text-danger" th:errors="*{photoUrl}"></p>
+
           </div>
           <div class="form-group col-md-6">
             <label for="photoUrl">Photourl</label>
@@ -29,6 +31,8 @@
                     name="photoUrl"
                     th:field="*{photoUrl}"
                     placeholder="Photo Url">
+            <p th:if="${#fields.hasErrors('photoUrl')}" class="text-danger" th:errors="*{photoUrl}"></p>
+
           </div>
         </div>
         <div class="form-group mb-3">
@@ -40,6 +44,8 @@
                   name="content"
                   th:field="*{content}"
                   placeholder="content">
+          <p th:if="${#fields.hasErrors('content')}" class="text-danger" th:errors="*{content}"></p>
+
         </div>
         <button type="submit" class="btn btn-primary">Create</button>
       </form>
