--- a/App2025/src/main/resources/templates/list-page.html
+++ b/App2025/src/main/resources/templates/list-page.html
@@ -18,8 +18,8 @@
                         <img class="img-fluid rounded-3 mb-3" th:src="@{${club.photoUrl}}" alt="..." />
                         <a th:text="${club.title}" class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">Project name</a>
                     </div>
+                    <a class="btn btn-primary" th:href="@{/clubs/{clubid}(clubid=${club.id})}">View</a>
                     <a class="btn btn-primary" th:href="@{/clubs/{clubid}/edit(clubid=${club.id})}">Edit</a>
-
                 </div>
             </div>
         </div>
